[ezbuy-refactor] commented code and improve readability